Task: 1st Draft

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
           <div class="col-lg-6 wow fadeInRight" data-wow-delay="0.2s">
             <div class="bg-primary rounded">
               <img
-                src="img/about-2.png"
+                src="img/logo.png"
                 class="img-fluid w-100"
                 alt="KIDS Refrigeration Services"
               />
