--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 <div class="container-fluid nav-bar bg-light shadow-sm">
     <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
         <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
+            <img src="./img-kids/logo.png" width="100px" alt="">
             <h1 class="text-primary m-0 fw-bold">K I D S Refrigeration</h1>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
@@ -140,7 +141,7 @@
         
         <!-- Slide 1: Air Conditioning -->
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid" src="img/hero-ac.jpg" alt="Air Conditioning Installation">
+            <img class="img-fluid" src="./img-kids/aircon.jpg" alt="Air Conditioning Installation">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" 
                  style="background: rgba(0, 0, 0, .45);">
                 <div class="container">
@@ -163,7 +164,7 @@
 
         <!-- Slide 2: Refrigeration -->
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid" src="img/hero-refrigeration.jpg" alt="Refrigeration Systems">
+            <img class="img-fluid" src="./img-kids/hero.jpg" alt="Refrigeration Systems">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" 
                  style="background: rgba(0, 0, 0, .45);">
                 <div class="container">
@@ -186,7 +187,7 @@
 
         <!-- Slide 3: HVAC & Maintenance -->
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid" src="img/hero-hvac.jpg" alt="HVAC Maintenance">
+            <img class="img-fluid" src="./img-kids/hero.png" alt="HVAC Maintenance">
             <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" 
                  style="background: rgba(0, 0, 0, .45);">
                 <div class="container">
@@ -248,8 +249,8 @@
             </div>
             <div class="col-lg-6 pt-4" style="min-height: 500px;">
                 <div class="position-relative h-100 wow fadeInUp" data-wow-delay="0.5s">
-                    <img class="position-absolute img-fluid w-100 h-100" src="img/about-1.jpg" style="object-fit: cover; padding: 0 0 50px 100px;" alt="Refrigeration Equipment">
-                    <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="img/about-2.jpg" style="object-fit: cover;" alt="Technician Working">
+                    <img class="position-absolute img-fluid w-100 h-100" src="./img-kids/aircon.jpg" style="object-fit: cover; padding: 0 0 50px 100px;" alt="Refrigeration Equipment">
+                    <img class="position-absolute start-0 bottom-0 img-fluid bg-white pt-2 pe-2 w-50 h-50" src="./img-kids/logo.png" style="object-fit: cover;" alt="Technician Working">
                 </div>
             </div>
         </div>
@@ -304,7 +305,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="service-item bg-light rounded shadow-sm h-100">
                     <div class="overflow-hidden rounded-top">
-                        <img class="img-fluid w-100" src="img/service-installation.jpg" alt="Refrigeration Installation">
+                        <img class="img-fluid w-100" src="./img-kids/coldroom.jfif" alt="Refrigeration Installation">
                     </div>
                     <div class="p-4 text-center">
                         <h5 class="text-primary mb-3">Refrigeration Installation</h5>
@@ -318,7 +319,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="service-item bg-light rounded shadow-sm h-100">
                     <div class="overflow-hidden rounded-top">
-                        <img class="img-fluid w-100" src="img/service-maintenance.jpg" alt="Maintenance & Repairs">
+                        <img class="img-fluid w-100" src="./img-kids/spares.jpg" alt="Maintenance & Repairs">
                     </div>
                     <div class="p-4 text-center">
                         <h5 class="text-primary mb-3">Maintenance & Repairs</h5>
@@ -332,7 +333,7 @@
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="service-item bg-light rounded shadow-sm h-100">
                     <div class="overflow-hidden rounded-top">
-                        <img class="img-fluid w-100" src="img/service-hvac.jpg" alt="HVAC Systems">
+                        <img class="img-fluid w-100" src="./img-kids/hero.jpg" alt="HVAC Systems">
                     </div>
                     <div class="p-4 text-center">
                         <h5 class="text-primary mb-3">Air Conditioning & HVAC</h5>
