--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.kidsrefrigeration.com/">
+  <meta property="og:url" content="https://kidsrefrigeration.pikozm.com/">
   <meta property="og:title" content="K I D S Refrigeration | The Pride of Efficiency & Perfection">
   <meta property="og:description" content="Your trusted experts in refrigeration, cold rooms, and air conditioning installations across Zambia. We deliver efficiency, quality, and perfection.">
-  <meta property="og:image" content="https://www.kidsrefrigeration.com/img/og-image.jpg">
+  <meta property="og:image" content="https://kidsrefrigeration.pikozm.com/img-kids/logo.png">
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:url" content="https://www.kidsrefrigeration.com/">
+  <meta name="twitter:url" content="https://kidsrefrigeration.pikozm.com/">
   <meta name="twitter:title" content="K I D S Refrigeration | Cooling Solutions for Home & Industry">
   <meta name="twitter:description" content="We specialize in air conditioning, refrigeration, cold room design, and HVACR services in Zambia.">
-  <meta name="twitter:image" content="https://www.kidsrefrigeration.com/img/og-image.jpg">
+  <meta name="twitter:image" content="https://kidsrefrigeration.pikozm.com/img-kids/logo.png">
 
   <!-- Favicon -->
-  <link href="img/favicon.png" rel="icon">
+  <link href="./img-kids/logo.png" rel="icon">
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -482,7 +482,7 @@
                     &copy; <a class="border-bottom" href="#">KIDS Refrigeration</a>, All Rights Reserved.
                 </div>
                 <div class="col-md-6 text-center text-md-end">
-                    Designed By <a class="border-bottom" href="#">Your Company Name</a>
+                    Designed By <a class="border-bottom" href="https://pikozm.com">Piko Tech Services</a>
                 </div>
             </div>
         </div>
