--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
 
 
 <!-- Topbar Start -->
-<div class="container-fluid bg-light d-none d-lg-block">
+<div class="container-fluid bg-white d-none d-lg-block">
     <div class="row align-items-center top-bar px-lg-5">
         <div class="col-lg-3 col-md-12 text-center text-lg-start">
             <a href="index.html" class="navbar-brand m-0 p-0">
-                <h1 class="text-primary m-0 fw-bold">K I D S Refrigeration</h1>
-                <!-- OR use a logo -->
-                <!-- <img src="img/logo.png" alt="KIDS Refrigeration Logo" class="img-fluid" style="max-height: 60px;"> -->
+                <div class="d-flex align-items-center">
+                    <img src="./img-kids/logo.png" alt="KIDS Refrigeration Logo" class="img-fluid" style="max-height:60px;">
+                    <h1 class="text-primary m-0 fw-bold ms-3" style="font-size:1.25rem;">K I D S Refrigeration</h1>
+                </div>
+               
             </a>
         </div>
         <div class="col-lg-9 col-md-12 text-end">
@@ -101,7 +103,7 @@
 
 
 <!-- Navbar Start -->
-<div class="container-fluid nav-bar bg-light shadow-sm">
+<div class="container-fluid nav-bar bg-white shadow-sm">
     <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 py-lg-0 px-lg-4">
         <a href="index.html" class="navbar-brand d-flex align-items-center m-0 p-0 d-lg-none">
             <img src="./img-kids/logo.png" width="100px" alt="">
