--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <a href="#about" class="nav-item nav-link">About Us</a>
                 <a href="#services" class="nav-item nav-link">Our Services</a>
                 <a href="#projects" class="nav-item nav-link">Projects</a>
-                <a href="#team" class="nav-item nav-link">Team</a>
+                <!-- <a href="#team" class="nav-item nav-link">Team</a> -->
                 <a href="#contact" class="nav-item nav-link">Contact Us</a>
             </div>
            
